agregamos contador y funcionalidad al mismo

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="scoreCounter">
             <h1>Resultados</h1>
             <div class="scores">
-                <h2>Pc: </h2>
-                <h2>Usuario: </h2>
+                <h2>Pc: <div id="pc-counter"></div></h2>
+                <h2>Usuario: <div id="user-counter"></div></h2>
             </div>
         </div>
         <div class="gameContainer">
